Revert "fix: correct layout overflow and model-arch panel positioning"
This reverts commit dca1bf2a9840d5224bdbc2de88adebb32c8e39fc.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,6 @@ html, body {
 #navbar {
     width: 100%;
     height: 25px;
-    box-sizing: border-box;
     background-color: #bdbdbd;
     padding: 5px;
     position: relative;
@@ -353,7 +352,7 @@ html, body {
 #model-arch-panel {
     position: absolute;
     left: 0;
-    bottom: 0;
+    top: 70%;
     width: 100%;
     height: 0;
     overflow: hidden;
@@ -711,7 +710,7 @@ html, body {
 
 #image-container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 10px);
     float: left;
     background: #f0f0f0;
     border-left: 2px solid #ffffff;
